// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eArtifactHash79A71AFC": Object {
      "Description": "Artifact hash for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE": Object {
      "Description": "S3 bucket for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358": Object {
      "Description": "S3 key for asset version \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "dynamodb:BatchWriteItem",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TableCD117FA1",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::my-seeds-bucket/seeds.json",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "Roles": Array [
          Object {
            "Ref": "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": "my-seeds-bucket",
          "S3Key": "seeds.json",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`inline 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eArtifactHash79A71AFC": Object {
      "Description": "Artifact hash for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE": Object {
      "Description": "S3 bucket for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358": Object {
      "Description": "S3 key for asset version \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "dynamodb:BatchWriteItem",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TableCD117FA1",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "Roles": Array [
          Object {
            "Ref": "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "InlineSeeds": "[{\\"id\\":1,\\"column\\":\\"foo\\"},{\\"id\\":2,\\"column\\":\\"bar\\"}]",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`json file 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eArtifactHash79A71AFC": Object {
      "Description": "Artifact hash for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE": Object {
      "Description": "S3 bucket for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358": Object {
      "Description": "S3 key for asset version \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdArtifactHash584F00C3": Object {
      "Description": "Artifact hash for asset \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC": Object {
      "Description": "S3 bucket for asset \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1": Object {
      "Description": "S3 key for asset version \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "dynamodb:BatchWriteItem",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TableCD117FA1",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    Object {
                      "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC",
                    },
                    "/",
                    Object {
                      "Fn::Select": Array [
                        0,
                        Object {
                          "Fn::Split": Array [
                            "||",
                            Object {
                              "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                            },
                          ],
                        },
                      ],
                    },
                    Object {
                      "Fn::Select": Array [
                        1,
                        Object {
                          "Fn::Split": Array [
                            "||",
                            Object {
                              "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "Roles": Array [
          Object {
            "Ref": "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`multiple seeders 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eArtifactHash79A71AFC": Object {
      "Description": "Artifact hash for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE": Object {
      "Description": "S3 bucket for asset \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
    "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358": Object {
      "Description": "S3 key for asset version \\"9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4e\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3Bucket77314CEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters9aef665652bde9e695d1b39b9e6e66f873d205e83ceea61d4dd36edbf4716c4eS3VersionKey6DBEC358",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "dynamodb:BatchWriteItem",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TableCD117FA1",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::seeds-bucket-one/seeds-one.json",
                  ],
                ],
              },
            },
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::seeds-bucket-two/seeds-two.json",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomDynamodbSeederCustomDynamodbSeederServiceRoleDefaultPolicy6C04255C",
        "Roles": Array [
          Object {
            "Ref": "CustomDynamodbSeederCustomDynamodbSeederServiceRole5FC6AEF8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DynamoDBSeeder1CustomResource555E70AD": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": "seeds-bucket-one",
          "S3Key": "seeds-one.json",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "DynamoDBSeeder2CustomResourceAC955965": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": "seeds-bucket-two",
          "S3Key": "seeds-two.json",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederCustomDynamodbSeeder3D3D7F10",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
